fix: scrol overflow

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
 }
 
 .createNote {
